fix: Theme Swage - Text overflow in dropdown menu (#4531)
* fix

* fix

--- a/p/themes/Swage/swage.css
+++ b/p/themes/Swage/swage.css
@@ -1294,6 +1294,7 @@ button.as-link {
 
 #nav_menu_actions ul.dropdown-menu {
 	left: 0;
+	right: auto;
 }
 
 #nav_menu_read_all ul.dropdown-menu {
